<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/MenuNewGame"
        android:title="@string/NewGameBtnText"
        app:showAsAction="never" />
    <item
        android:id="@+id/MenuNewRound"
        android:title="@string/MenuNewRound"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/Regular"
                android:title="@string/MenuRegular"
                app:showAsAction="never">
                <menu>
                    <item
                        android:id="@+id/Regular1P"
                        android:title="@string/Menu1Player"
                        app:showAsAction="never"/>
                    <item
                        android:id="@+id/Regular2P"
                        android:title="@string/Menu2Player"
                        app:showAsAction="never"/>
                </menu>
            </item>
            <item
                android:id="@+id/dans"
                android:title="@string/MenuDans"
                app:showAsAction="never">
                <menu>
                    <item
                        android:id="@+id/dans9"
                        android:title="9"
                        app:showAsAction="never"/>
                    <item
                        android:id="@+id/dans10"
                        android:title="10"
                        app:showAsAction="never"/>
                    <item
                        android:id="@+id/dans11"
                        android:title="11"
                        app:showAsAction="never"/>
                    <item
                        android:id="@+id/dans12"
                        android:title="12"
                        app:showAsAction="never"/>
                </menu>
            </item>
            <item
                android:id="@+id/Misery"
                android:title="@string/MenuMisery"
                app:showAsAction="never">
                <menu>
                    <item
                        android:id="@+id/RegularMisery"
                        android:title="@string/MenuRegular"
                        app:showAsAction="never"/>
                    <item
                        android:id="@+id/OpenMisery"
                        android:title="@string/Open"
                        app:showAsAction="never"/>
                </menu>
            </item>
            <item
                android:id="@+id/Troul"
                android:title="@string/MenuTroul"
                app:showAsAction="never"/>
            <item
                android:id="@+id/Solo"
                android:title="@string/MenuSolo"
                app:showAsAction="never">
                <menu>
                    <item
                        android:id="@+id/RegularSolo"
                        android:title="@string/MenuRegular"
                        app:showAsAction="never"/>
                    <item
                        android:id="@+id/SoloSlim"
                        android:title="@string/MenuSlim"
                        app:showAsAction="never"/>
                </menu>
            </item>
        </menu>
    </item>
    <item
        android:id="@+id/MenuLogOut"
        android:title="@string/LogOutBtnText"
        app:showAsAction="never" />
</menu>